tests/errors/array_transfer_01.f90
program arrays_01
    implicit none
    integer :: a(3)
    real :: size_a
    print *, transfer(a, 1, size_a)
end
